Changes (Minor) (Suggested by Ashish)
Changes made at page end and to tab names

--- a/no-sidebar2.html
+++ b/no-sidebar2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Built by AKash Muni</title>
+		<title>Work Experience</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -85,10 +85,9 @@
 					<li><a href="mailto:muni.akash@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					<li><a href="tel:+919969940942" class="icon solid alt fa-phone" title="Call Me"><span class="label">Phone</span></a></li>
 				</ul>
-				<!--<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>-->
-			</footer>
+				<ul class="copyright">
+					<li>Created By Akash Muni</li>
+				</ul>
 
 		</div>
 
