--- a/CAD Models.html
+++ b/CAD Models.html
@@ -165,9 +165,9 @@
 					<li><a href="mailto:muni.akash@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					<li><a href="tel:+919969940942" class="icon solid alt fa-phone" title="Call Me"><span class="label">Phone</span></a></li>
 				</ul>
-				<!--<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>-->
+				<ul class="copyright">
+					<li>Created By Akash Muni</li>
+				</ul>
 			</footer>
 
 								
