--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -221,7 +221,7 @@
 					<li><a href="https://www.linkedin.com/in/akash-muni-48a73619b/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://www.instagram.com/scientific_brat/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://github.com/bratcoder-crypto" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://t.me/@Akash9969?start=Hello_Akash" class="icon solid alt fa-paper-plane"><span class="label">GitHub</span></a></li>
+					<li><a href="https://t.me/Akash9969?start=Hello_Akash" class="icon solid alt fa-paper-plane"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:muni.akash@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					<li><a href="tel:+919969940942" class="icon solid alt fa-phone" title="Call Me"><span class="label">Phone</span></a></li>
 				</ul>
