--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Akash Muni</title>
@@ -33,7 +29,7 @@
 							<a href="no-sidebar2.html">Work experience</a>
 						</li>
 						<!-- <li><a href="elements.html">Elements</a></li>-->
-						<li><a href="images/CV_AKASH_MUNI.pdf" class="button primary icon solid fa-download" download="CV.pdf">Download CV</a></li>
+						<li><a href="images/CV_AKASH_MUNI.pdf" class="button primary icon solid fa-download">Download CV</a></li>
 					</ul>
 				</nav>
 				
@@ -87,6 +83,7 @@
 					}
 				}
 				</script>
+
 			</header>
 
 			<!-- Banner -->
